--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
-Revision history for Test-LinkChecker
+Revision history for Test-LinkChecker.
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.01    2010-01-23 
+        First version.
 
